# VidMuse

./: .gitignore  ds_test.ipynb  infer.py  loaders_test.ipynb  pyproject.toml  test.sl  test2.sl  test3.sl
.ipynb_checkpoints/: merge_video_audio-checkpoint.ipynb
audiocraft/: environment.py  loaders_test.ipynb  read_video.py  train.py
audiocraft/data/: audio_dataset.py  audio_dataset2.py  info_audio_dataset.py  music_dataset.py  video.py  video2.py  video_test.ipynb
audiocraft/grids/audiogen/: audiogen_base_16khz.py  audiogen_pretrained_16khz_eval.py
audiocraft/grids/compression/: debug.py  encodec_audiogen_16khz.py  encodec_base_24khz.py  encodec_musicgen_32khz.py
audiocraft/grids/musicgen/: musicgen_base_32khz.py  musicgen_base_cached_32khz.py  musicgen_clapemb_32khz.py  musicgen_melody_32khz.py  musicgen_pretrained_32khz_eval.py  musicgen_stereo_finetune_32khz.py
audiocraft/metrics/: fad.py
audiocraft/models/: lm copy.py  lm.py  lm2.py  load_test.ipynb  vidmuse_annotated.py
audiocraft/solvers/: base.py  builders.py  musicgen.py
audiocraft/utils/: utils.py
config/: config.yaml
config/dset/audio/: v2m20k.yaml
config/slurm/: multi4.yaml
config/solver/: default.yaml
config/solver/VidMuse/: VidMuse_example copy.yaml  VidMuse_example.yaml  default.yaml  (+3 more)
config/teams/: default.yaml
config/wandb/: default.yaml
egs/V2M/: build_data_jsonl.py  get_max_sr.py  para_build_data_jsonl.py  split_data_jsonl.py  test.ipynb
egs/V2M20K/: data_test.jsonl
notebooks/: test.ipynb
vidmuse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+11 files in other folders)
